--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.0",
+    "build": "^0.1.4",
     "dayjs": "^1.11.7",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
